# Network-Intrusion-Detection-System

./: .env-example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
config/: detectors.json  logging_config.json  rate_limits.json  setup.json
docs/: PLAN.md  PRD.md  PRD_beaconing_detection.md  PRD_dashboard.md  PRD_detection_engine.md  PRD_dns_tunneling.md  PRD_threat_intel.md  PROMPT_LOG.md  RULE_SCHEMA.md  TODO.md
rules/: syn_flood.yaml  tcp_port_scan.yaml
scripts/: benchmark_detectors.py
src/network_defender/: __init__.py  constants.py
src/network_defender/capture/: __init__.py  filters.py  interface_discovery.py  models.py  packet_summary.py  pcap_io.py  rate_limiter.py  service.py
src/network_defender/detectors/: __init__.py  base.py  models.py  registry.py
src/network_defender/parser/: __init__.py  extractors.py  models.py  parser.py
src/network_defender/rules/: __init__.py  engine.py  evaluator.py  (+2 more)
tests/: __init__.py  conftest.py
tests/detectors/: test_brute_force.py  test_floods.py  test_heuristics.py  test_integration.py  test_port_scans.py
tests/unit/: __init__.py  test_base.py  test_capture_filters.py  test_capture_interface_discovery.py  test_capture_packet_summary.py  test_capture_pcap_io.py  test_capture_rate_limiter.py  test_capture_service.py  test_config.py  test_gatekeeper.py  test_parser_benchmark.py  test_parser_extractors.py  test_parser_models.py  test_parser_parser.py  test_rules_engine.py  test_rules_evaluator.py  test_rules_loader.py  test_rules_models.py  test_sdk_capture.py  test_sdk_lifecycle.py
(+20 files in other folders)
