[project]
name = "network-defender"
version = "0.1.0"
description = "A production-quality, modular Network Intrusion Detection System (IDS) in Python."
authors = [
    { name = "Network Defender Contributors" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "scapy>=2.5.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "sqlalchemy>=2.0.30",
    "pydantic>=2.7.4",
    "pyyaml>=6.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.2.2",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.8",
    "mypy>=1.10.0",
    "httpx>=0.27.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
addopts = "--cov=src/network_defender --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.report]
fail_under = 85

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/network_defender"]

